// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductCard should render with all fields hidden, open in new tabs 1`] = `
<DocumentFragment>
  <div
    class="wigmix-product-card"
  >
    <a
      class="cursor-pointer"
      data-pw="ut-product-result-card-1"
      data-testid="wigmix-product-card-anchor"
      href="https://test_product_url/"
      rel="noopener noreferrer"
      target="_blank"
    >
      <div
        class="wigmix-product-card-image-container"
      >
        <div
          class="relative flex justify-center"
        >
          <img
            alt=""
            class="wigmix-product-card-image object-cover aspect-square"
            data-pw="ut-product-result-card-image-1"
            data-testid="wigmix-product-card-image"
            src="test_image_url"
          />
        </div>
      </div>
      <div
        class="wigmix-product-card-details pt-2"
      >
        <span
          class="wigmix-product-card-title line-clamp-1"
        />
        <span
          class="wigmix-product-card-secondary-title line-clamp-1"
        />
        <div
          class="wigmix-product-card-price-row flex flex-wrap items-center gap-1"
        >
          <span
            class="wigmix-product-card-price"
          />
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`ProductCard should render with secondary title field, price fields with custom color 1`] = `
<DocumentFragment>
  <div
    class="wigmix-product-card"
  >
    <a
      class="cursor-pointer"
      data-pw="ut-product-result-card-1"
      data-testid="wigmix-product-card-anchor"
      href="https://test_product_url/"
      rel=""
      target=""
    >
      <div
        class="wigmix-product-card-image-container"
      >
        <div
          class="relative flex justify-center"
        >
          <img
            alt=""
            class="wigmix-product-card-image object-cover aspect-square"
            data-pw="ut-product-result-card-image-1"
            data-testid="wigmix-product-card-image"
            src="test_image_url"
          />
        </div>
      </div>
      <div
        class="wigmix-product-card-details pt-2"
      >
        <span
          class="wigmix-product-card-title line-clamp-1"
        >
          product_title
        </span>
        <span
          class="wigmix-product-card-secondary-title line-clamp-1"
        >
          product_brand
        </span>
        <div
          class="wigmix-product-card-price-row flex flex-wrap items-center gap-1"
        >
          <span
            class="wigmix-product-card-price"
            style="color: rgb(0, 0, 255);"
          >
            $100.00
          </span>
          <span
            class="wigmix-product-card-original-price line-through"
            style="color: rgb(255, 0, 0);"
          >
            $125.00
          </span>
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`ProductCard should render with standard fields 1`] = `
<DocumentFragment>
  <div
    class="wigmix-product-card"
  >
    <a
      class="cursor-pointer"
      data-pw="ut-product-result-card-1"
      data-testid="wigmix-product-card-anchor"
      href="https://test_product_url/"
      rel=""
      target=""
    >
      <div
        class="wigmix-product-card-image-container"
      >
        <div
          class="relative flex justify-center"
        >
          <div
            class="group relative overflow-hidden bg-content3 dark:bg-content2 pointer-events-none before:opacity-100 before:absolute before:inset-0 before:-translate-x-full before:animate-[shimmer_2s_infinite] before:border-t before:border-content4/30 before:bg-gradient-to-r before:from-transparent before:via-content4 dark:before:via-default-700/10 before:to-transparent after:opacity-100 after:absolute after:inset-0 after:-z-10 after:bg-content3 dark:after:bg-content2 data-[loaded=true]:pointer-events-auto data-[loaded=true]:overflow-visible data-[loaded=true]:!bg-transparent data-[loaded=true]:before:opacity-0 data-[loaded=true]:before:-z-10 data-[loaded=true]:before:animate-none data-[loaded=true]:after:opacity-0 transition-background !duration-300 wigmix-product-card-image size-full aspect-square"
          >
            <div
              class="opacity-0 group-data-[loaded=true]:opacity-100 transition-opacity motion-reduce:transition-none !duration-300"
            />
          </div>
          <img
            alt=""
            class="wigmix-product-card-image object-cover aspect-square"
            data-pw="ut-product-result-card-image-1"
            data-testid="wigmix-product-card-image"
            src="test_image_url"
          />
        </div>
      </div>
      <div
        class="wigmix-product-card-details pt-2"
      >
        <span
          class="wigmix-product-card-title line-clamp-1"
        >
          product_title
        </span>
        <span
          class="wigmix-product-card-secondary-title line-clamp-1"
        />
        <div
          class="wigmix-product-card-price-row flex flex-wrap items-center gap-1"
        >
          <span
            class="wigmix-product-card-price"
          >
            $100.00
          </span>
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`ProductCard should render with standard fields, find similar enabled with custom icon, with original price field 1`] = `
<DocumentFragment>
  <div
    class="wigmix-product-card"
  >
    <a
      class="cursor-pointer"
      data-pw="ut-product-result-card-1"
      data-testid="wigmix-product-card-anchor"
      href="https://test_product_url/"
      rel=""
      target=""
    >
      <div
        class="wigmix-product-card-image-container"
      >
        <div
          class="relative flex justify-center"
        >
          <img
            alt=""
            class="wigmix-product-card-image object-cover aspect-square"
            data-pw="ut-product-result-card-image-1"
            data-testid="wigmix-product-card-image"
            src="test_image_url"
          />
          <button
            class="wigmix-find-similar-button absolute bottom-3 right-3 z-5 rounded-full bg-white p-1 hover:opacity-90"
            data-pw="ut-find-similar-button"
            data-testid="wigmix-find-similar-button"
          >
            <div
              class="wigmix-find-similar-icon custom"
              style="height: 20px; width: 20px; background-color: rgb(0, 0, 0); mask: url(https://test_find_similar_icon_url) no-repeat center / contain;"
            />
          </button>
        </div>
      </div>
      <div
        class="wigmix-product-card-details pt-2"
      >
        <span
          class="wigmix-product-card-title line-clamp-1"
        >
          product_title
        </span>
        <span
          class="wigmix-product-card-secondary-title line-clamp-1"
        />
        <div
          class="wigmix-product-card-price-row flex flex-wrap items-center gap-1"
        >
          <span
            class="wigmix-product-card-price"
          >
            $100.00
          </span>
          <span
            class="wigmix-product-card-original-price line-through"
          >
            $125.00
          </span>
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;

exports[`ProductCard should render with standard fields, find similar enabled, with zero original price 1`] = `
<DocumentFragment>
  <div
    class="wigmix-product-card"
  >
    <a
      class="cursor-pointer"
      data-pw="ut-product-result-card-1"
      data-testid="wigmix-product-card-anchor"
      href="https://test_product_url/"
      rel=""
      target=""
    >
      <div
        class="wigmix-product-card-image-container"
      >
        <div
          class="relative flex justify-center"
        >
          <img
            alt=""
            class="wigmix-product-card-image object-cover aspect-square"
            data-pw="ut-product-result-card-image-1"
            data-testid="wigmix-product-card-image"
            src="test_image_url"
          />
          <button
            class="wigmix-find-similar-button absolute top-3 right-3 z-5 rounded-full bg-white p-1 hover:opacity-90"
            data-pw="ut-find-similar-button"
            data-testid="wigmix-find-similar-button"
          >
            <div
              class="wigmix-find-similar-icon default size-5"
            >
              <svg
                class="size-full"
                fill="none"
                viewBox="0 0 60 60"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  clip-rule="evenodd"
                  d="M40.2825 40.2797C36.24 44.3222 30.8625 46.5497 25.1437 46.5497C19.425 46.5497 14.0513 44.3222 10.0088 40.2797C1.66125 31.9322 1.66125 18.3534 10.0088 10.0059C14.1825 5.83219 19.6612 3.74719 25.1437 3.74719C30.6262 3.74719 36.1088 5.83594 40.2825 10.0059C48.63 18.3534 48.63 31.9322 40.2825 40.2797ZM59.04 56.3859L44.1937 41.5397C52.6987 31.6659 52.2937 16.7184 42.9338 7.35469C33.1275 -2.45156 17.1637 -2.45156 7.3575 7.35469C-2.4525 17.1647 -2.4525 33.1247 7.3575 42.9309C12.1087 47.6822 18.4237 50.2997 25.1437 50.2997C31.2337 50.2997 36.9825 48.1322 41.5425 44.1909L56.3887 59.0372C56.7562 59.4047 57.2363 59.5847 57.7125 59.5847C58.1925 59.5847 58.6725 59.4047 59.04 59.0372C59.7713 58.3059 59.7713 57.1172 59.04 56.3859Z"
                  fill="currentColor"
                  fill-rule="evenodd"
                />
              </svg>
            </div>
          </button>
        </div>
      </div>
      <div
        class="wigmix-product-card-details pt-2"
      >
        <span
          class="wigmix-product-card-title line-clamp-1"
        >
          product_title
        </span>
        <span
          class="wigmix-product-card-secondary-title line-clamp-1"
        />
        <div
          class="wigmix-product-card-price-row flex flex-wrap items-center gap-1"
        >
          <span
            class="wigmix-product-card-price"
          >
            $100.00
          </span>
        </div>
      </div>
    </a>
  </div>
</DocumentFragment>
`;
